# tsproc

./: .gitignore  CMakeLists.txt  Doxyfile  README.rst  compute_hi.c  f2py_sig.bat  hittest.txt  makefile.gfortran  makefile_tsproc2  run_cmake_mingw_gfortran.bat  test_compute_hi.F90  tsp_command_processors.F90  tsp_data_structures.F90  tsp_equation_parser.F90  tsp_input.F90  tsp_main.F90  tsp_main_loop.F90  tsp_output.F90  tsp_time_series_processors.F90  tsp_utilities.F90
cmake/: find_programs_and_libraries.cmake  options_and_targets.cmake  print_summary.cmake
share/libanne4.0/: CMakeLists.txt
share/libanne4.0/lib_data/: message.wdm
share/libanne4.0/lib_x86/: copylibs.bat
share/libanne4.0/msg/: error.fil  message.in  message.out
share/libanne4.0/src/: CMakeLists.txt  Makefile
share/libanne4.0/src/adwdm/: CMakeLists.txt  makefile  makefile_linux  makefile_linux~  utwdmd.f
share/libanne4.0/src/aide/: makefile
share/libanne4.0/src/ann/: makefile
share/libanne4.0/src/awstat/: makefile
share/libanne4.0/src/graph/: makefile
share/libanne4.0/src/stats/: makefile
share/libanne4.0/src/util/: CMakeLists.txt  dttmpc.f  dttmsn.f  makefile  makefile_linux  makefile_linux~
share/libanne4.0/src/waide/: makefile  qtfils.f
share/libanne4.0/src/wdimex/: makefile
share/libanne4.0/src/wdm/: CMakeLists.txt  makefile  makefile_linux  makefile_linux~  makefile_x64  wdexpt.f
share/libanne4.0/src/wdmrx/: makefile
share/mkmf_templates/: mingw_gfortran.tpl
share/tests/: BEC_TSPROC_GSFLOW.inp  CMakeLists.txt  CTestTestfile.cmake  Makefile  Q_BEC_BE_6500.ssf  cmake_install.cmake  gsflow_sumq_05406500.ssf  hi_list_output.txt  hi_test_all_classes.inp  hi_test_inv_indices.inp  hi_test_write_pest.inp  par2par_base.tpl  prms_stream_obs.ssf  simulated_vals.ins  wdm_test_01.inp
share/tests/test_case/: Q_BEC_BE_6500.ssf  Q_BEC_Brew_6470.ssf  Q_BEC_Garft_6491.ssf  Q_BEC_Mazo_6540.ssf  bec_dv_13pr_14run_1sol_54-06.data  bec_obs_tsproc.out  bec_param.groups  bec_pest.cnd  bec_pest.par  bec_pest.params  bec_pest.pst  bec_pest.tpl  bec_pest_hi.pst  bec_tables_tsproc.out  gagedefs.txt  gsflow_pest.control  modelcmd.bat  modelcmd_hi.bat  observation.ins  par2par_base.tpl  param.data  parcalc.tpl  picalc.ins  picalc.tpl  simulated_values.ins  tsproc.inp  tsproc_hi.inp
src/: CMakeLists.txt  cfbuff90.inc  compute_hi.C  compute_hi.c  compute_hi.cpp  fprettify.rc  test_compute_hi.F90  tokenize.F90  tsp_command_processors.F90  tsp_data_structures.F90  tsp_equation_parser.F90  tsp_hydrologic_indices.F90  tsp_input.F90  tsp_main.F90  tsp_main_loop.F90  tsp_output.F90  tsp_time_series_processors.F90  tsp_utilities.F90  version_control.tpl  wsc_additions.F90
src/flibs/: README+TSPROC.txt
src/flibs/src/: CMakeLists.txt
src/flibs/src/datastructures/: qsortarray_template.F90
src/flibs/src/libs/strings/: CMakeLists.txt  m_vstring.F90  m_vstringformat.F90  m_vstringlist.F90
src/flibs/src/strings/: CMakeLists.txt  m_vstring.F90  m_vstringlist.F90  tokenize.F90  tokenlist.F90
src/wdm_support/: UTCHAR.FOR  UTNUMB.FOR  UTWDMD.FOR  UTWDMF.FOR  WDATM1.FOR  WDATRB.FOR  WDBTCH.FOR  WDMESS.FOR  WDMID.FOR  WDOP.FOR  WDTMS1.FOR  WDTMS2.FOR
tests/: BEC.pest_groups  BEC.pest_parameters  BEC_FLOW_DUR.pst  BEC_HI.pst  BEC_TSPROC_GSFLOW.inp  CMakeLists.txt  CTestTestfile.cmake  Makefile  PE_lksub145.ssf  PRMS_parameters_BEC_22DEC2008.tpl  Q_BEC_BE_6500.ssf  SR_lksub145.ssf  TSPROC_INP.inp  bec_205406500.ggo  cmake_install.cmake  dates_6500.txt  hi_all_classes_list_output_obs.txt  hi_list_output.txt  hi_list_output_obs.txt  hi_list_output_sim.txt  hi_list_sim_pest.txt  hi_test_01.inp  hi_test_all_classes.inp  hi_test_inv_indices.inp  hi_test_write_pest.inp  par2par_base.tpl  prms_stream_obs.ssf  sim_vals_flowdur.ins  sim_vals_flowdur.obf  simulated_vals.ins  step4f.inp  temporary.21  test__read_statvar_file.inp  test_flow_duration_values.py  test_hi_01.inp  test_series_compare_output.R  test_volume_to_series_output.R  tsp_compare_flow_duration_output.R  tsp_test_flow_duration.inp  tsp_test_flow_duration_custom.inp  (+4 more)
tests/calcs/: BEC_HIT_ANALYSIS.csv  CMakeLists.txt  FLOW_DURATION__compare_to_R_calculation.R  HYDROLOGICAL_INDICES__compare_to_HIT_calculation.R  SERIES_COMPARE__compare_to_R_calculation.R  compare_FLOW_DURATION_to_R.R  compare_HYDROLOGICAL_INDICES_to_HIT.R  function__read_ssf_file.R  hit_hat_output_for_BEC.csv
tests/io/: CMakeLists.txt  GET_MUL_SERIES_PLOTGEN__basic_read.inp  GET_MUL_SERIES_SSF__basic_read.inp  GET_MUL_SERIES_SSF__verify_read.R  get_mul_series_gsflow_gage__basic_read.inp  get_mul_series_statvar__test_of_partial_read.inp  get_series_wdm__basic_read.inp  read_statvar_file.inp  testdata.ggo  testdata.plt  testdata.wdm
tests/test_case/: Q_BEC_BE_6500.ssf  Q_BEC_Brew_6470.ssf  Q_BEC_Garft_6491.ssf  bec_dv_13pr_14run_1sol_54-06.data  bec_obs_tsproc.out  bec_param.groups  bec_pest.cnd  bec_pest.par  bec_pest.pst  bec_pest_hi.pst  bec_tables_tsproc.out  gsflow_pest.control  modelcmd.bat  observation.ins  simulated_values.ins  svdabatch.bat  tsproc.inp
webpages/: TSPROC_code.html  TSPROC_faq.html  index.html
